extension inject click event to course list

--- a/extension_website/manifest.json
+++ b/extension_website/manifest.json
@@ -3,9 +3,7 @@
     "name": "Course Catalog Extension",
     "version": "1.0",
     "description": "Enhance the browsing experience on specific website.",
-    "permissions": [
-        "activeTab"
-    ],
+    "permissions": ["activeTab"],
     "action": {
         "default_popup": "popup.html"
     },
@@ -14,9 +12,8 @@
             "matches": [
                 "https://pitcsprd.csps.pitt.edu/psp/pitcsprd/EMPLOYEE/SA/s/WEBLIB_HCX_CM.H_COURSE_CATALOG.FieldFormula.IScript_Main?"
             ],
-            "js": [
-                "content.js"
-            ]
+            "js": ["content.js"],
+            "all_frames": true
         }
     ]
 }
