--- a/extension_website/manifest.json
+++ b/extension_website/manifest.json
@@ -12,7 +12,11 @@
             "matches": [
                 "https://pitcsprd.csps.pitt.edu/psp/pitcsprd/EMPLOYEE/SA/s/WEBLIB_HCX_CM.H_COURSE_CATALOG.FieldFormula.IScript_Main?"
             ],
-            "js": ["content.js", "vis.js", "grapher.js"],
+            "js": [
+                "graphing/content.js",
+                "graphing/vis.js",
+                "graphing/grapher.js"
+            ],
             "all_frames": true
         }
     ]
