--- a/extension_website/manifest.json
+++ b/extension_website/manifest.json
@@ -3,25 +3,21 @@
     "name": "Course Catalog Extension",
     "version": "1.0",
     "description": "Enhance the browsing experience on specific website.",
-    "permissions": [
-      "activeTab",
-      "storage"
-    ],
+    "permissions": ["activeTab", "storage"],
     "action": {
-      "default_popup": "popup.html"
+        "default_popup": "popup.html"
     },
     "content_scripts": [
-      {
-        "matches": [
-          "https://pitcsprd.csps.pitt.edu/psp/pitcsprd/EMPLOYEE/SA/s/WEBLIB_HCX_CM.H_COURSE_CATALOG.FieldFormula.IScript_Main?"
-        ],
-        "js": [
-          "graphing/content.js",
-          "graphing/vis.js",
-          "graphing/grapher.js"
-        ],
-        "all_frames": true
-      }
+        {
+            "matches": [
+                "https://pitcsprd.csps.pitt.edu/psp/pitcsprd/EMPLOYEE/SA/s/*"
+            ],
+            "js": [
+                "graphing/content.js",
+                "graphing/vis.js",
+                "graphing/grapher.js"
+            ],
+            "all_frames": true
+        }
     ]
-  }
-  
+}
